assets/css/main.css
/* ... */
.ha-news-ticker-wrapper span.ha-news-ticker-sticky-title {
	position: absolute;
	top: 50%;
	left: auto;
	z-index: 1; 
	padding: 20px;
	background: #333;
	color: #fff;
	font-size: 1rem;
	line-height: 1;
	-webkit-transform: translateY(-50%);
	    -ms-transform: translateY(-50%);
	        transform: translateY(-50%);
}

.ha-news-ticker-wrapper li.ha-news-ticker-item {
	margin-right: 20px;
	white-space: nowrap;
}

.ha-news-ticker-wrapper li.ha-news-ticker-item:last-child {
	margin-right: 0;
}

.ha-news-ticker-wrapper .ha-news-ticker-title {
	margin: 0;
	font-size: 1rem;
	line-height: 1;
}

.ha-news-ticker-wrapper li.ha-news-ticker-item a {
	color: #242424;
}

.ha-news-ticker-wrapper li.ha-news-ticker-item a:hover {
	color: #e04c8a;
}

.ha-fun-factor-icon {
	font-size: 3em;
}

.ha-fun-factor-content .ha-fun-factor-content-number,
.ha-fun-factor-content .ha-fun-factor-content-text {
	margin-top: 0;
	margin-bottom: 15px;
	font-size: 24px;
}

.ha-ff-icon--left .ha-fun-factor-content {
	padding-left: 20px;
}

.ha-ff-icon--right .ha-fun-factor-content {
	padding-right: 20px;
}

.ha-fun-factor-divider {
	display: block;
	margin-bottom: 15px; 
	height: 1px;
	background-color: #ccc;
}

.ha-ff-icon--top .ha-fun-factor-icon-section,
.ha-ff-icon--top .ha-fun-factor-image-section {
	display: inline-block;
	margin-top: 10px;
	margin-bottom: 10px; 
	width: auto;
	height: auto;
}

.ha-fun-factor-image-section img {
	width: 200px;
	height: 100px;
}

.ha-ff-container {
	padding: 10px;
	word-wrap: break-word;

	overflow-wrap: break-word;
}

.ha-ff-icon--right > .elementor-widget-container .ha-ff-container,
.ha-ff-icon--left > .elementor-widget-container .ha-ff-container {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display:         flex;
	-webkit-box-align: center;
	-webkit-align-items: center;
	        align-items: center;
	-ms-flex-align: center;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-webkit-flex-direction: row;
	    -ms-flex-direction: row;
	        flex-direction: row;
}

.ha-ff-icon--right > .elementor-widget-container .ha-ff-container {
	-webkit-box-orient: horizontal;
	-webkit-box-direction: reverse;
	-webkit-flex-direction: row-reverse;
	    -ms-flex-direction: row-reverse;
	        flex-direction: row-reverse;
	text-align: right;
}

.ha-ff-icon--right > .elementor-widget-container .ha-ff-container .ha-fun-factor-divider,
.ha-ff-icon--left > .elementor-widget-container .ha-ff-container .ha-fun-factor-divider,
.ha-ff-icon--top > .elementor-widget-container .ha-ff-container .ha-fun-factor-divider {
	display: block;
	margin-right: auto;
	margin-left: auto;
	width: 100px;
}

.ha-ff-icon--right > .elementor-widget-container .ha-ff-container .ha-fun-factor-divider,
.ha-ff-icon--left > .elementor-widget-container .ha-ff-container .ha-fun-factor-divider {
	width: 100% !important;
}

.ha-fun-factor-divider-align-left {
	margin-left: 0 !important; 
	text-align: left;
}

.ha-fun-factor-divider-align-right {
	margin-right: 0 !important; 
	text-align: right;
}

.ha-fun-factor-divider-align-center {
	margin-right: auto !important; 
	margin-left: auto !important;
	text-align: center;
}

.ha-social-icons-wrapper {
	display: -webkit-inline-box;
	display: -webkit-inline-flex;
	display: -ms-inline-flexbox;
	display:         inline-flex;
	-webkit-box-align: center;
	-webkit-align-items: center;
	        align-items: center; 
	-ms-flex-align: center;
}

.ha-social-icons-wrapper a {
	display: -webkit-inline-box;
	display: -webkit-inline-flex;
	display: -ms-inline-flexbox;
	display:         inline-flex;
	-webkit-box-align: center;
	-webkit-align-items: center;
	        align-items: center;
	-ms-flex-align: center;
	padding: 5px;
	border-radius: 5px; 
	color: #fff;
	font-size: 30px;
}

.elementor-social-icon-label {
	color: #d30c5c;
}

.ha-social-icon:not(:last-child) {
	margin-right: 10px;
}

.ha-social-icon i,
.ha-social-icon svg {
	position: relative;
	display: initial;
}

.ha-social-icon svg {
	width: 100%;
	height: 100%;
}

.ha-social-icon i {
	width: 1em;
	height: 1em;
}

.ha-social-icon-label {
	margin: 0;
	margin-left: 10px; 
	width: 100%;
	height: 100%;
	font-size: 18px;
	font-family: Roboto, sans-serif;
	line-height: 1;
}

.elementor-social-icon-label .ha-social-icon-label {
	margin-left: 0;
}

.elementor-element-edit-mode .ha-social-icon-sticky {
	z-index: 9999;
}

.ha-social-icons:not(.elementor-element-edit-mode) .ha-social-icon-sticky {
	position: fixed;
}

.ha-social-icon-separator {
	margin-right: 10px;
}

.ha-separator--stroke .ha-social-icon-separator {
	width: 1px;
	height: 1em;
	background: #d30c5c;
}

.ha-separator--custom .ha-social-icon-separator {
	color: #d30c5c;
	font-size: 24px;
}

.ha-social-icon-separator:last-child {
	display: none;
}

